testing out height to make sure the content doesnt overlap the header

--- a/src/sass/layout/_structure.scss
+++ b/src/sass/layout/_structure.scss
@@ -9,10 +9,11 @@ footer {
 
 .main {
   width: 100%;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
-  flex: 1 0 auto;
+  // flex: 1 0 auto;
 }
 
 .body-subpage {
